# AgentCard

./: .gitignore  LANGUAGES.md  LICENSE  LICENSE.en  LICENSE.zh  NOTICE  README.en.md  README.md  README.zh.md
adapters/python/: pyproject.toml
adapters/python/mcp-server/: PUBLISH.sh  README.md  pyproject.toml  server.json
adapters/python/mcp-server/src/agentcard_mcp/: __init__.py  __main__.py  schema.py  server.py
adapters/python/mcp-server/tests/: test_server.py
adapters/python/pr-content/autogen/: PR_BODY.md
adapters/python/pr-content/crewai/: PR_BODY.md
adapters/python/pr-content/langchain/: PR_BODY.md
adapters/python/src/agentcard_adapters/: __init__.py  core.py  langchain_adapter.py
adapters/python/tests/: test_adapters_mock.py  test_core.py
crates/pacr-types/: Cargo.toml  README.md
crates/pacr-types/src/: complexity.rs  lib.rs  record.rs
draft/: SUBMIT.md  draft-aevum-agentcard-00.html  draft-aevum-agentcard-00.txt  draft-aevum-agentcard-00.xml  draft-aevum-causal-intervention-record-00.html  draft-aevum-causal-intervention-record-00.txt  draft-aevum-causal-intervention-record-00.xml
eon/five-layer/: ag1-alphagenome.json  lr1-longevity.json  pv1-population.json
